# gama.clients

./: .gitignore  README.md  SimpleGUI_new.html  gama_library.html  index.html  mapbox.html  message_example.html
python/: LICENSE  README.md  benchmark_results.json  pyproject.toml
python/examples/: benchmark_performance.py  compare_benchmarks.py  predatorPrey.gaml  requirements.txt  sequential_example.py  sync_client_example.py
python/examples/async_examples/: complete_example.py
python/examples/bug tests/: file_to_download.txt  multiple_clients.gaml  multiple_clients.py  test_gaml_file.gaml  upload_download_and_closing.py  uploaded.txt
python/examples/gaml/: complete.gaml  empty.gaml  slow.gaml
python/examples/sync_example/: 01.connect_close.py  02.load.py  03.play.py  04.pause.py  05.step.py  06.step_back.py  07.expression.py  08.stop.py  09.reload.py  10.describe.py  11.upload_download.py  12.exit.py
python/examples/sync_examples/: 01.connect_close.py  02.load.py  03.play.py  04.pause.py  05.step.py  06.step_back.py  07.expression.py  08.stop.py  09.reload.py  10.describe.py  11.upload_download.py  12.exit.py  complete_example.py  ex01_connect_close.py  ex02_load_stop.py  ex03_play.py  ex04_pause.py  ex05_step.py  ex06_step_back.py  ex07_expression.py  ex08_reload.py  ex09_describe.py  ex10_upload_download.py  ex11_exit.py  ex12_validate.py  run_all.py
python/gama_client/: async_client.py  base_client.py  command_types.py  message_types.py  sync_client.py
python/tests/: conftest.py  gaml_paths.py
python/tests/async_test/: __init__.py  test_expression.py  test_load.py  test_play_pause_stop.py  test_step.py
python/tests/awaitable_test/: test_describe.py  (+6 more)
(+216 files in other folders)
