[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "gama_client"
version = "1.2.0"
authors = [
  { name="Baptiste Lesquoy", email="baptistelesquoy@protonmail.com" },
]
description = "A python library to interact with Gama server"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets~=10.3",
]
[project.urls]
"Homepage" = "https://github.com/gama-platform/Gama-client-python"
"Bug Tracker" = "https://github.com/gama-platform/Gama-client-python/issues"
[tool.hatch.build]
include = [
  "gama_client/*.py",
]
exclude = [
]